@@ -34,6 +34,7 @@ void MediaSettings::reset() {
 	current_sec = 0;
 	//current_sub_id = SubNone; 
 	current_sub_id = NoneSelected;
+	current_video_id = NoneSelected;
 	current_audio_id = NoneSelected;
 	current_title_id = NoneSelected;
 	current_chapter_id = NoneSelected;
@@ -125,6 +126,7 @@ void MediaSettings::list() {
 
 	qDebug("  current_sec: %f", current_sec);
 	qDebug("  current_sub_id: %d", current_sub_id);
+	qDebug("  current_video_id: %d", current_video_id);
 	qDebug("  current_audio_id: %d", current_audio_id);
 	qDebug("  current_title_id: %d", current_title_id);
 	qDebug("  current_chapter_id: %d", current_chapter_id);
@@ -211,6 +213,7 @@ void MediaSettings::save(QSettings * set) {
 
 	set->setValue( "current_sec", current_sec );
 	set->setValue( "current_sub_id", current_sub_id );
+	set->setValue( "current_video_id", current_video_id );
 	set->setValue( "current_audio_id", current_audio_id );
 	set->setValue( "current_title_id", current_title_id );
 	set->setValue( "current_chapter_id", current_chapter_id );
@@ -300,6 +303,7 @@ void MediaSettings::load(QSettings * set) {
 
 	current_sec = set->value( "current_sec", current_sec).toDouble();
 	current_sub_id = set->value( "current_sub_id", current_sub_id ).toInt();
+	current_video_id = set->value( "current_video_id", current_video_id ).toInt();
 	current_audio_id = set->value( "current_audio_id", current_audio_id ).toInt();
 	current_title_id = set->value( "current_title_id", current_title_id ).toInt();
 	current_chapter_id = set->value( "current_chapter_id", current_chapter_id ).toInt();
